--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,16 @@ body {
   flex-wrap: wrap;
   max-width: 400px;
 }
+
+.square {
+  width: 16px;
+  height: 16px;
+  margin: 2px;
+  background-color: #1d1d1d;
+  box-shadow: 0 0 2px #1d1d1d;
+  transition: 1s ease;
+}
+
+.square:hover {
+  transition-duration: 0s;
+}
